# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/offlineimap--head--1.0
#

2004-10-18 14:01:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-3

    Summary:
      Set tagging method to tagline; ChangeLog really added now.
    Revision:
      offlineimap--head--1.0--patch-3


    new files:
     ChangeLog

    modified files:
     {arch}/=tagging-method


2004-10-18 14:01:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-2

    Summary:
      Moved Subversion changelog to ChangeLog.svn; added Arch ChangeLog
    Revision:
      offlineimap--head--1.0--patch-2


    renamed files:
     .arch-ids/ChangeLog.id
       ==> .arch-ids/ChangeLog.svn.id
     ChangeLog
       ==> ChangeLog.svn


2004-10-18 14:00:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-1

    Summary:
      Attempt to fix problem with getting back the wrong UID from APPENDUID
    Revision:
      offlineimap--head--1.0--patch-1


    modified files:
     offlineimap/folder/IMAP.py


2004-09-24 21:33:20 GMT	John Goerzen <jgoerzen@complete.org>	base-0

    Summary:
      Imported from svn
    Revision:
      offlineimap--head--1.0--base-0


    new files:
     COPYING COPYRIGHT ChangeLog Makefile README UPGRADING
     bin/offlineimap debian/changelog debian/control
     debian/copyright debian/dirs debian/docs debian/rules
     docs/sgml-common/Makefile.common docs/sgml-common/ps2epsi
     manual.html manual.pdf manual.ps manual.txt offlineimap.1
     offlineimap.conf offlineimap.conf.minimal offlineimap.py
     offlineimap.sgml offlineimap/CustomConfig.py
     offlineimap/__init__.py offlineimap/accounts.py
     offlineimap/folder/Base.py offlineimap/folder/IMAP.py
     offlineimap/folder/LocalStatus.py
     offlineimap/folder/Maildir.py offlineimap/folder/UIDMaps.py
     offlineimap/folder/__init__.py offlineimap/imaplib.py
     offlineimap/imapserver.py offlineimap/imaputil.py
     offlineimap/init.py offlineimap/localeval.py